--- a/css/landing.css
+++ b/css/landing.css
@@ -121,6 +121,11 @@
 /* Grid Section */
 .presets-section {
   width: 100%;
+  margin-bottom: 3rem;
+}
+
+.presets-section:last-of-type {
+  margin-bottom: 0;
 }
 
 .presets-title {
