--- a/themes/do-not-disturb/style.css
+++ b/themes/do-not-disturb/style.css
@@ -25,8 +25,8 @@
 .dnd-box {
   position: relative;
   padding: 60px 80px;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
   /* Brushed Metal Frame (moved from ::before) */
   background:
