--- a/themes/street-sign/style.css
+++ b/themes/street-sign/style.css
@@ -8,8 +8,8 @@
 .theme-street-sign {
   --sign-base: var(--sign-color, #003884);
   background-color: var(--sign-base);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
